--- a/monolith/Foodics/.env.example
+++ b/monolith/Foodics/.env.example
@@ -1,10 +1,10 @@
-APP_NAME="Order Service"
+APP_NAME="Foodics"
 APP_ENV=local
 APP_KEY=base64:kO5KO3EHkV98H8yXyRRKBFPCrShBuRObm80TvJDfPvE=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
-APP_PORT=3001
+APP_PORT=3005
 NETWORK_NAME=food_network
 
 APP_LOCALE=en
@@ -44,4 +44,7 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_CLIENT=phpredis
 REDIS_HOST=app-redis
 REDIS_PASSWORD=pass_89
-REDIS_PORT=6372
+REDIS_PORT=6379
+REDIS_PREFIX="foodics_"
+
+ADMIN_EMAIL="admin@yesitsme.com"
