--- a/micro-service/src/Notification/.env.example
+++ b/micro-service/src/Notification/.env.example
@@ -4,7 +4,7 @@ APP_KEY=base64:kO5KO3EHkV98H8yXyRRKBFPCrShBuRObm80TvJDfPvE=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
-APP_PORT=3001
+APP_PORT=3002
 NETWORK_NAME=food_network
 
 APP_LOCALE=en
@@ -44,4 +44,5 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_CLIENT=phpredis
 REDIS_HOST=app-redis
 REDIS_PASSWORD=pass_89
-REDIS_PORT=6372
+REDIS_PORT=6379
+REDIS_PREFIX="foodics_"
