--- a/micro-service/src/Order/.env.example
+++ b/micro-service/src/Order/.env.example
@@ -44,4 +44,5 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_CLIENT=phpredis
 REDIS_HOST=app-redis
 REDIS_PASSWORD=pass_89
-REDIS_PORT=6372
+REDIS_PORT=6379
+REDIS_PREFIX="foodics_"
